--- a/themes/nebulika/layouts/index.html
+++ b/themes/nebulika/layouts/index.html
@@ -3,7 +3,7 @@
     {{ $latest := first 1 $pages }}
     {{ range $latest }}
         <article class="post-full">
-            <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+            <a href="{{ .Permalink }}"><h2>{{ .Title }}</h2></a>
             <div class="post-meta">
                 <span>{{ .Date.Format "January 2, 2006" }}</span>
             </div>
@@ -17,7 +17,7 @@
         {{ $other_posts := after 1 $pages }}
         {{ range $other_posts }}
             <article class="post-item">
-                <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+                <a href="{{ .Permalink }}"><h3>{{ .Title }}</h3></a>
                 <div class="post-meta">
                     <span>{{ .Date.Format "January 2, 2006" }}</span>
                 </div>
