--- a/themes/nebulika/layouts/partials/search_box.html
+++ b/themes/nebulika/layouts/partials/search_box.html
@@ -1,5 +1,9 @@
 <div class="search">
     <h3>Search</h3>
-    <input type="text" id="search-input" placeholder="Search...">
-    <ul id="search-results"></ul>
+    <div id="search-overlay">
+        <input type="text" id="search-input" placeholder="Search...">
+        <div id="search-results-box">
+            <ul id="search-results"></ul>
+        </div>
+    </div>
 </div>
