--- a/themes/nebulika/static/css/_layout.css
+++ b/themes/nebulika/static/css/_layout.css
@@ -214,7 +214,7 @@ body {
     display: inline-block;
     text-decoration: none;
     padding: 4px 10px;
-    border-radius: 16px;
+    border-radius: var(--tag-border-radius);
     font-size: 0.8em;
     margin: 0 6px 6px 0;
 }
