--- a/public/css/_layout.css
+++ b/public/css/_layout.css
@@ -15,16 +15,6 @@
     vertical-align: middle;
 }
 
-.theme-switcher {
-    background: none;
-    border: none;
-    font-size: 1.5em;
-    cursor: pointer;
-    position: absolute;
-    right: var(--spacing-s);
-    top: 50%;
-}
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     margin: 0;
@@ -214,7 +204,7 @@ body {
     display: inline-block;
     text-decoration: none;
     padding: 4px 10px;
-    border-radius: 16px;
+    border-radius: var(--tag-border-radius);
     font-size: 0.8em;
     margin: 0 6px 6px 0;
 }
