--- a/themes/nebulika/layouts/_default/baseof.html
+++ b/themes/nebulika/layouts/_default/baseof.html
@@ -14,11 +14,11 @@
         </a>
         <!-- Toggle button -->
         <div id="theme-switcher" class="theme-switcher">
-            <span class="icon moon">🌙</span>
+            <span class="icon moon">☾</span>
             <span class="switch">
                 <span class="thumb"></span>
             </span>
-            <span class="icon sun">☀️</span>
+            <span class="icon sun">☀</span>
         </div>
     </header>
     <div class="container">
